--- a/start-spring/pom.xml
+++ b/start-spring/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.3</version>
+        <version>3.0.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.example</groupId>
@@ -19,5 +19,6 @@
         <spring-cloud.version>2022.0.1</spring-cloud.version>
     </properties>
     <modules>
+        <module>security-demo</module>
     </modules>
 </project>
