--- a/start-spring/security-demo/src/main/resources/application.yml
+++ b/start-spring/security-demo/src/main/resources/application.yml
@@ -1,1 +1,9 @@
-
+spring:
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:security-demo
+    username: sa
+    password:
+  sql:
+    init:
+      mode: embedded
