--- a/start-spring/security-demo/src/main/resources/application.yml
+++ b/start-spring/security-demo/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:security-demo
+    url: jdbc:h2:mem:test
     username: sa
     password:
   sql:
     init:
-      mode: embedded
+      mode: always
+  h2:
+    console:
+      enabled: true
